<resources>
    <string name="app_name">aMAZE</string>
    <string name="add_device">Add Device</string>
    <string name="update_device">Update device</string>
    <string name="device_name">Device name</string>
    <string name="ip">IP</string>
    <string name="enter_device_name_here">enter device name here</string>
    <string name="device_ip">device ip</string>
    <string name="username">username</string>
    <string name="enter_user_name">enter user name</string>
    <string name="textview">TextView</string>
    <string name="password">Password</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="add_word">Add a new device</string>
    <string name="name">Name</string>

    <string-array name="powerstate_array">
        <item>ON</item>
        <item>OFF</item>
        <item>High-Z</item>
    </string-array>
    <string-array name="wifistate_array">
        <item>ON</item>
        <item>OFF</item>
    </string-array>
</resources>